[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=2",
]

[project]
name = "dojinvoice-db"
version = "2.0.0"
description = "Make DB of Dojinvoice"
readme = "README.md"
keywords = [
  "dlsite",
  "selenium",
]
license = { text = "MIT" }
authors = [
  { name = "eggplants", email = "w10776e8w@yahoo.co.jp" },
]
requires-python = ">=3.12,<4"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
dependencies = [
  "beautifulsoup4>=4.12.3,<5",
  "humanfriendly>=10,<11",
  "install-playwright>=0.1,<0.2",
  "lxml>=5.3,<6",
  "playwright>=1.49.1,<2",
  "requests>=2.32.3,<3",
  "types-beautifulsoup4>=4.12.0.20241020,<5",
  "types-humanfriendly>=10.0.1.20241221,<11",
  "types-requests>=2.32.0.20241016,<3",
]

urls.Repository = "https://github.com/eggplants/dojinvoice_db"
scripts.dvdb = "dojinvoice_db.main:main"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
  { include = "dojinvoice_db" },
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
pre-commit = ">=2.20,<5.0"
taskipy = "^1.10.3"
pytest = "^8.0.0"
pytest-cov = ">=4.1,<7.0"

[tool.poetry.requires-plugins]
poetry-plugin-shell = ">=1.0"

[tool.black]
line-length = 120
target-version = [
  'py312',
]

[tool.ruff]
line-length = 120

lint.select = [
  "ALL",
]
lint.ignore = [
  "D",
  "D203",
  "D213",
]
lint.per-file-ignores."scripts/*.py" = [
  "D",
  "INP001", #  Add an `__init__.py`.
]
lint.per-file-ignores."tests/test_*.py" = [
  "S101", #    Use of assert detected
]
lint.mccabe.max-complexity = 18
lint.pydocstyle.convention = "numpy"

[tool.mypy]
pretty = true
python_version = "3.12"
show_error_codes = true
strict = true

[tool.taskipy.tasks]
test = "pytest --cov=dojinvoice_db --cov-report=term"
"test:ci" = "task test --cov-report=xml:cov.xml"
lint = "pre-commit run -a"
profile = "python -m cProfile"
