[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling", "uv-dynamic-versioning" ]

[project]
name = "dojinvoice-db"
description = "Make DB of Dojinvoice"
readme = "README.md"
keywords = [
  "dlsite",
  "selenium",
]
license = { text = "MIT" }
authors = [ { name = "eggplants", email = "w10776e8w@yahoo.co.jp" } ]
requires-python = ">=3.12,<4"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
dynamic = [ "version" ]
dependencies = [
  "beautifulsoup4>=4.12.3,<5",
  "humanfriendly>=10,<11",
  "install-playwright>=0.1,<0.2",
  "lxml>=5.3,<7",
  "playwright>=1.49.1,<2",
  "requests>=2.32.3,<3",
  "types-beautifulsoup4>=4.12.0.20241020,<5",
  "types-humanfriendly>=10.0.1.20241221,<11",
  "types-requests>=2.32.0.20241016,<3",
]

urls.Repository = "https://github.com/eggplants/dojinvoice_db"
scripts.dvdb = "dojinvoice_db.main:main"

[dependency-groups]
dev = [
  "mypy>=1.1.1,<2",
  "pre-commit>=2.20,<5",
  "pytest>=8,<10",
  "pytest-cov>=4.1,<8",
  "taskipy>=1.10.3,<2",
]
docs = [ "pdoc" ]

[tool.hatch.version]
# tool.hatch.version.source is not listed in official schema.
# https://github.com/ninoseki/uv-dynamic-versioning/issues/21
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
include = [ "dojinvoice_db" ]

[tool.hatch.build.targets.wheel]
include = [ "dojinvoice_db" ]

[tool.uv]
default-groups = [
  "dev",
  "docs",
]

[tool.ruff]
line-length = 120
format.indent-style = "space"
format.quote-style = "double"
lint.select = [
  "ALL",
]
lint.ignore = [
]
lint.per-file-ignores."main.py" = [
  "T201", # `print` found
]
lint.per-file-ignores."scripts/*.py" = [
  "D",
  "INP001", # Add an `__init__.py`.
]
lint.per-file-ignores."tests/*.py" = [
  "D",
  "S101", # Use of assert detected
]
lint.pydocstyle.convention = "google"

[tool.mypy]
pretty = true
python_version = "3.12"
show_error_codes = true
strict = true

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
fallback-version = "0.0.0"

[tool.taskipy.tasks]
test = "pytest --cov=dojinvoice_db --cov-report=term"
"test:ci" = "task test --cov-report=xml:cov.xml"
lint = "pre-commit run -a"
profile = "python -m cProfile"
