[metadata]
name = dojinvoice_db
version = attr: dojinvoice.__version__
description = Make DB of Dojinvoice
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/dojinvoice_db
author = eggplants
author_email = w10776e8w@yahoo.co.jp
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    beautifulsoup4==4.11.1
    humanfriendly==10.0
    lxml==4.9.1
    pyderman==3.3.0
    requests==2.28.1
    selenium==4.3.0
    types-beautifulsoup4==4.11.3
    types-humanfriendly==10.0.1
    types-requests==2.28.1
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    dvdb = dojinvoice.main:main

[options.extras_require]
dev =
    black
    flake8
    mypy
    pre-commit
    setuptools>=46.4.0
    types-setuptools
    wheel

[options.package_data]
dojinvoice_db = py.typed

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120
extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True

[tool:black]
line-length = 88
